# Promt-Copy-Tauri

./: README.md  file-viewer.html  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  vite.config.ts
src/: App.tsx  File-Viewer.tsx  ThemeContext.tsx  main.tsx  styles.css  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CalendarListItem.tsx  CalendarPanel.tsx  CheckedFilesTab.tsx  FileSystemWatcher.tsx  FileTreeItem.tsx  FileViewer.tsx  FileViewerPanel.tsx  FileWindow.tsx  FolderHistory.ts  TabBar.tsx  TitleBar.tsx  Toast.tsx
src/utils/: storage.ts
