[package]
name = "tauriprompt"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
notify = "5.0.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["time"] }

tauri = { version = "1.5.0", features = [ 
    "path-all",
    "clipboard-all",
    "dialog-all",
    "fs-all",
    "shell-open",
    "window-all"
] }

[features]
custom-protocol = ["tauri/custom-protocol"]

# Hide console window in Windows release builds
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_UI_WindowsAndMessaging"] }

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
